# SaveContext

./: .gitignore  NOTICE  README.md  pyproject.toml
examples/: benchmark.py  big_demo.py  demo.py  nist_questions.json  thesis_compare.py  thesis_compare_results.json  token_report.py
examples/benchmark_suite/: README.md  artifact.html  eval_holdout.py  eval_paraphrase.py  generate_docs.py  measure.py  plot.py  results.json  results.md
examples/integration/: .mcp.json  CLAUDE.md  README.md  savecontext_hint.py  settings.hook.json
src/savecontext/: __init__.py  chunking.py  cli.py  diffing.py  embeddings.py  extraction.py  handles.py  llm.py  loaders.py  retrieval.py  server.py  service.py  storage.py  summarize.py  tokenizer.py  verify.py
tests/: conftest.py  test_agent_brief.py  test_cli.py  test_compact_ingest.py  test_embeddings.py  test_extraction_extra.py  test_llm.py  test_loaders.py  test_lookup.py  test_retrieval.py  test_tools.py  test_units.py  test_verify.py
