[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "savecontext"
version = "0.1.1"
description = "Git LFS for LLM context: a versioned, loss-aware context compression MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["mcp", "llm", "context", "compression", "tokens", "claude", "rag"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.2.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.5.0"]
pdf = ["pypdf>=4.0"]
dev = ["pytest>=7.0"]

[project.scripts]
savectx = "savecontext.cli:main"
savecontext = "savecontext.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
